8240615: is_power_of_2() has Undefined Behaviour and is inconsistent

Reviewed-by: jrose, redestad